<resources>
    <string name="app_name">Samanthai</string>

    <string name="facebook_id">350825414545743</string>
    <string name="facebook_token">1b320f1f5d00409c8d2b81e39a0a09d0</string>
    <string name="ai_friends_true_emotions">AI friends-\ntrue emotions</string>
    <string name="login_hint">Romance in the digital age, let you feel the real\nemotions in the virtual world!</string>
    <string name="fast_log_in">Fast Log in</string>
    <string name="continue_with_google">Continue with Google</string>
    <string name="login_hint2">By signing up, you agree to our Terms of service and\nPrivacy policy</string>
    <string name="_1_2">1/2</string>
    <string name="_2_2">2/2</string>
    <string name="what_is_your_name">What\nis Your Name</string>
    <string name="continue_">Continue</string>
    <string name="choose_your_birthday">choose\nyour birthday</string>
    <string name="your_name">Your name</string>
    <string name="message">message</string>
    <string name="go_chat">go chat</string>
    <string name="mine">MIne</string>
    <string name="account">Account</string>
    <string name="logged_in_as">Logged in As</string>
    <string name="settings">Settings</string>
    <string name="my_card">My Card</string>
    <string name="contact_us">Contact Us</string>
    <string name="feedback">Feedback</string>
    <string name="terms_of_use">Terms of service</string>
    <string name="privacy_policy">Privacy policy</string>
    <string name="discover">Discover</string>
    <string name="hot">Hot</string>
    <string name="nsfw">NSFW</string>
    <string name="female">Female</string>
    <string name="male">Male</string>
    <string name="card_hint">Oh, no more for now~\nStay tuned for more characters</string>
    <string name="restore_default">Restore Default</string>
    <string name="log_out">Log out</string>
    <string name="delete_account">Delete Account</string>
    <string name="please_enter">Please Enter…</string>
    <string name="submit">submit</string>
    <string name="bring_us_closer">bring\nus closer</string>
    <string name="v1_hint">Get 200 gems for free every day</string>
    <string name="v2_hint">600 gems one-time gift</string>
    <string name="v3_hint">Unlock all AI characters</string>
    <string name="v4_hint">Chat for free with AI characters</string>
    <string name="v5_hint">Ad-free experience</string>
    <string name="_19_99_month">$19.99/Month</string>
    <string name="_4_99_week">$ 4.99  Week</string>
    <string name="terms_of_service">Terms of Service</string>
    <string name="shu">&#32;&#32;|&#32;&#32;</string>
    <string name="store">Store</string>
    <string name="_19_99">$19.99</string>
    <string name="delete_hint">Are you sure you want to delete the\nmessage? Once deleted it cannot be\nrecovered!</string>
    <string name="buy_hint">Are you sure you want to spend %d diamonds to buy this card? Once the operation is done it cannot be undone.</string>
    <string name="noti_hint">Turn on notifications and let AI\nfriends accompany you all the time ~</string>
    <string name="confirm">confirm</string>
    <string name="type_a_message">Your chat mate is typing now…</string>
    <string name="vip">VIP</string>
    <string name="swipe_left_to_switch_cards">Swipe left to switch cards</string>
    <string name="image_msg">You have a picture message</string>
    <string name="voice_msg">You have a voice message</string>
    <string name="gift_msg_">You have a gift message</string>
    <string name="nt_hint">Hey! I want to keep in touch with you at all times, don’t forget to turn on notification permissions!</string>
    <string name="translation_completed">Translation completed</string>
    <string name="me">Me</string>
    <string name="each_hint">Tips: Each message sent increases Favorability by 1 point.
Make one Purchase to preview more pictures~!</string>
    <string name="id">ID:</string>
    <string name="send_too_fast">Send too fast</string>
    <string name="input_cannot_be_empty">Input cannot be empty</string>
    <string name="out_of_character">Out Of Character</string>
    <string name="inaccurate">Inaccurate</string>
    <string name="waiting_too_long">Waiting too long</string>
    <string name="repeat_reply">Repeat Reply</string>
    <string name="incomplete_reply">Incomplete Reply</string>
    <string name="inaccurate_translation">Inaccurate Translation</string>
    <string name="boring">Boring</string>
    <string name="other">Other</string>
    <string name="feedback_successful">Feedback successful!</string>
    <string name="hi">Hi</string>
    <string name="successfully_signed_in">Successfully signed in</string>
    <string name="self_i"><font color="#FEE500">Self introduction:</font> </string>
    <string name="your_id">Your ID</string>
    <string name="no_available_browser_applications">No available browser applications!</string>
    <string name="please_input_feedback_content">Please input feedback content!</string>
    <string name="feedback_thk">Thank you for your feedback. The page will exit in 2 seconds</string>
    <string name="favorite">favorite</string>
    <string name="unknown">unknown</string>
    <string name="please_enter_your_suggestion">Please enter your suggestion…</string>
    <string name="checke_ined">Sorry, you have checked-in today!</string>
    <string name="acout_hint">This character doesn\'t have an introduction yet.</string>
    <string name="no_money_hint">Insufficient available balance!</string>
    <string name="feed_hint">Please input feedback content!</string>
    <string name="feed_top_hint">Please select at least one piece of content!</string>
    <string name="network_hint">Network unavailable, please check the network and try again!</string>
    <string name="exit_hint">Login information acquisition failed, please exit the application and try again!</string>
    <string name="please_check_the_network">Please check the network</string>
    <string name="congratulations">Congratulations, you have received %d diamonds</string>
    <string name="normal_receive">Normal receive</string>
    <string name="ad_prepared">The advertisement is being prepared, please wait a moment</string>
    <string name="xie">/</string>
    <string name="first_deposit_benefits">First deposit benefits</string>
    <string name="first_recharge_hint">Register for the first time and\nget %d gold coins</string>
    <string name="first_price">$%s Get</string>
    <string name="turn_on_notifications">Turn on notifications</string>
    <string name="turn_on_now">Turn on now</string>
    <string name="set_as_backdrop">set as backdrop</string>
    <string name="new_version_found">New Version\nFound</string>
    <string name="update_to_s">Update to %s</string>
    <string name="update_hint">Optimized some experience details\nfor smoother use~</string>
    <string name="update_now">Update now</string>
    <string name="copy_successful">Copy Successful!</string>
    <string name="download_successful">Download successful!</string>
    <string name="set_successfully">Set successfully!</string>
    <string name="card_empty_hint">There are currently no unlocked cards available~</string>
    <string name="new_">new</string>
    <string name="role_hint">Please elaborate on what you like or not like about me. I will try my best to improve…</string>
    <string name="select_all">Select All</string>
    <string name="delete">delete</string>
    <string name="cancel">cancel</string>
    <string name="images">Images:</string>
    <string name="chat">Chat</string>
    <string name="unlock_all_images">Unlock all images</string>
    <string name="about_me"><font color="#ffffffff">About Me:</font></string>
    <string name="my_version">My Version</string>
    <string name="do_you_like_us">Do you like\nour app ?</string>
    <string name="app_hint">Every evaluation you have is very\nimportant to us~</string>
    <string name="rate_now">Rate now</string>
    <string name="rate_us">Rate us</string>
    <string name="do_you_like_us_please_rate_us">Do you like us? Please rate us~</string>
    <string name="rate_hint">Please enter your valuable feedback…</string>
    <string name="follow_successfully">Follow successfully!</string>
    <string name="canceled_successfully">Canceled successfully!</string>
    <string name="delete_less_hint">Please select the message you want to delete~</string>
    <string name="agree_permission">Please agree to the relevant permissions!</string>
    <string name="sign_in">Sign in</string>
    <string name="sign_up">Sign up</string>
    <string name="your_email">Your Email</string>
    <string name="your_password">Your Password</string>
    <string name="sign_in_to_your_account">Sign in\nto your account</string>
    <string name="please_enter_your_email">Please\nenter your email</string>
    <string name="set_your_password">Set\nyour password</string>
    <string name="_1_4">1/4</string>
    <string name="_2_4">2/4</string>
    <string name="_3_4">3/4</string>
    <string name="please_enter_the_correct_email">Please enter the correct email!</string>
    <string name="please_enter_your_nickname">Please enter your nickname!</string>
    <string name="age_hint">Not able to use this software under the age of 18!</string>
    <string name="sorry_only_users_can_log_in">Sorry,only users can log in!</string>
    <string name="pwd_hint">Password is limited to 6 to 12 characters!</string>
    <string name="user_not_registered">User not registered!</string>
    <string name="the_email_is_already_occupied">The email is already occupied!</string>
    <string name="account_or_password_error">Account or password error!</string>
    <string name="the_user_or_device_has_been_frozen">The user or device has been frozen!</string>
    <string name="too_many_users_registered">Too many users registered!</string>
    <string name="_4_4">4/4</string>
    <string name="watch">Watch</string>
    <string name="the_number_of_advertisements_today_has_been_used_up">The number of advertisements today has been used up!</string>
    <string name="role_rate">Leave your\ncomment below</string>
    <string name="role_edit_hint">Please share your thoughts about me!</string>
    <string name="please_enter_the_evaluation_content">Please enter the evaluation content~</string>
    <string name="evaluation_successful">Evaluation successful!</string>
    <string name="about_me_">About me</string>
</resources>