<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".ui.start.LoginActivity"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.appcompat.widget.AppCompatImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="centerCrop"
        android:src="@drawable/s_bg"/>

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="bottom|center_horizontal">

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:fontFamily="@font/airfool_2"
            android:textColor="@color/white"
            android:textSize="36sp"
            android:text="@string/ai_friends_true_emotions"/>

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="19dp"
            android:textColor="@color/bdbdbe"
            android:textSize="14sp"
            android:text="@string/login_hint"
            android:gravity="center"/>

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="35dp"
            android:layout_marginStart="45dp"
            android:layout_marginEnd="45dp"
            android:orientation="horizontal">

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/login_sign_in"
                android:layout_width="match_parent"
                android:layout_height="55dp"
                android:layout_weight="3"
                android:background="@drawable/shape_r34_gff93e6_af60ff"
                android:gravity="center"
                android:textStyle="bold"
                android:textColor="@color/white"
                android:textSize="16sp"
                android:text="@string/sign_in"/>

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/login_sign_up"
                android:layout_width="match_parent"
                android:layout_height="55dp"
                android:layout_weight="4"
                android:layout_marginStart="15dp"
                android:background="@drawable/shape_r34_white20_s1_e9a6ff"
                android:gravity="center"
                android:textStyle="bold"
                android:textColor="@color/white"
                android:textSize="16sp"
                android:text="@string/sign_up"/>

        </androidx.appcompat.widget.LinearLayoutCompat>

        <androidx.appcompat.widget.LinearLayoutCompat
            android:id="@+id/login_google"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:layout_marginTop="20dp"
            android:layout_marginStart="45dp"
            android:layout_marginEnd="45dp"
            android:background="@drawable/shape_r34_white20_s1_e9a6ff"
            android:gravity="center"
            android:orientation="horizontal">

            <androidx.appcompat.widget.AppCompatImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/l_google"/>

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:textStyle="bold"
                android:textColor="@color/white"
                android:textSize="16sp"
                android:text="@string/continue_with_google"/>

        </androidx.appcompat.widget.LinearLayoutCompat>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/login_privacy"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp"
            android:gravity="center"
            android:textColor="@color/_696867"
            android:textSize="12sp"
            android:text="@string/login_hint2"/>

    </androidx.appcompat.widget.LinearLayoutCompat>

</RelativeLayout>