<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:layout_height="506dp">

    <androidx.appcompat.widget.AppCompatImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:src="@drawable/up_bg"/>

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:orientation="vertical"
        android:paddingStart="20dp"
        android:paddingEnd="20dp">

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/update_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/new_version_found"
            android:textColor="@color/white"
            android:textSize="23sp"
            android:textStyle="italic|bold" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/update_version"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="33dp"
            android:text="@string/update_to_s"
            android:textAllCaps="true"
            android:textColor="@color/_1d1128"
            android:textSize="15sp"
            android:textStyle="bold" />

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/update_hint"
            android:textColor="@color/_1d112850"
            android:textSize="14sp" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/update_btn"
            android:layout_width="188dp"
            android:layout_height="42dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="18dp"
            android:background="@drawable/shape_r21_gff93e6_af60ff"
            android:gravity="center"
            android:text="@string/update_now"
            android:textAllCaps="true"
            android:textColor="@color/white"
            android:textSize="14sp"
            android:textStyle="bold|italic" />


    </androidx.appcompat.widget.LinearLayoutCompat>

    <androidx.appcompat.widget.AppCompatImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/noi3"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:id="@+id/update_close"/>

</RelativeLayout>