<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="500dp">

    <androidx.appcompat.widget.AppCompatImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:src="@drawable/noi1"/>

    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@drawable/noi2"
        android:layout_centerInParent="true">

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:textColor="@color/_1d1128"
            android:textSize="15sp"
            android:text="@string/turn_on_notifications"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="100dp"/>

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/_1d112850"
            android:textSize="14sp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="13dp"
            android:text="@string/noti_hint"
            android:gravity="center"/>
        
        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/bo_btn"
            android:layout_width="188dp"
            android:layout_height="42dp"
            android:layout_marginTop="20dp"
            android:layout_gravity="center_horizontal"
            android:background="@drawable/shape_r21_gff93e6_af60ff"
            android:gravity="center"
            android:textStyle="bold|italic"
            android:textColor="@color/white"
            android:textSize="14sp"
            android:text="@string/turn_on_now"/>

    </androidx.appcompat.widget.LinearLayoutCompat>

    <androidx.appcompat.widget.AppCompatImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/noi3"
        android:id="@+id/bo_close"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"/>



</RelativeLayout>